<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_radius_8dp">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/distance"
        android:textColor="@color/a9a9a9_191919"
        android:textSize="@dimen/sp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:background="@null"
        android:inputType="number"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        app:layout_constraintTop_toBottomOf="@id/tv" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_48"
        android:background="@color/cecece_282828"
        app:layout_constraintTop_toBottomOf="@id/et" />

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_6"
        android:text="@string/time_goal_hint"
        android:textColor="@color/secondary_666666_808080"
        android:textSize="@dimen/sp_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <View
        android:id="@+id/view"
        android:layout_width="1px"
        android:layout_height="@dimen/dp_22"
        android:background="@color/cecece_282828"
        app:layout_constraintBottom_toBottomOf="@id/tv_c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_c" />


    <TextView
        android:id="@+id/tv_c"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_20"
        android:text="@string/cancel"
        android:textColor="@color/black_white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toStartOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hint" />

    <TextView
        android:id="@+id/tv_s"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_20"
        android:text="@string/sure"
        android:textColor="@color/black_white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view"
        app:layout_constraintTop_toBottomOf="@id/tv_hint" />

    <View
        android:id="@+id/mask"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:padding="@dimen/dp_20"
        android:background="@color/translucent_white_60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view"
        app:layout_constraintBottom_toBottomOf="@id/tv_s"
        app:layout_constraintTop_toTopOf="@id/tv_s" />


</androidx.constraintlayout.widget.ConstraintLayout>