<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/f5f5f5_121212">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_16"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:text="@string/title_exercise"
        android:textColor="@color/black_white"
        android:textSize="@dimen/sp_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:padding="@dimen/dp_6"
        app:layout_constraintBottom_toBottomOf="@id/tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv"
        app:srcCompat="@drawable/ic_more_black_24dp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_36"
        android:background="@color/f5f5f5_121212"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv"
        app:tabGravity="center"
        app:tabIndicator="@drawable/tab_indicator"
        app:tabIndicatorColor="@color/orange"
        app:tabIndicatorHeight="@dimen/dp_10"
        app:tabSelectedTextColor="@color/orange"
        app:tabTextAppearance="@style/TabLayoutTextStyle"
        app:tabTextColor="@color/black_666666">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outdoor_run" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walk" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cycle" />

    </com.google.android.material.tabs.TabLayout>

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/map_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp_16"
                android:foreground="@color/_99f5f5f5_99121212"
                app:cardBackgroundColor="@color/color_primary_variant"
                app:cardCornerRadius="@dimen/dp_10"
                app:cardElevation="@dimen/dp_6" />

        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"

            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_26"
                android:layout_marginTop="@dimen/dp_26"
                android:background="@drawable/bg_white_radius_36dp"
                android:gravity="center"
                android:paddingStart="@dimen/dp_10"
                android:paddingTop="@dimen/dp_4"
                android:paddingEnd="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_4"
                android:text="@string/searching_for_gps"
                android:textColor="@color/_99000000_888888"
                android:textSize="@dimen/sp_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.lepu.health.widget.NumTextView
                android:id="@+id/tv_distance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_54"
                android:text="0.00"
                android:textColor="@color/black_white"
                android:textSize="@dimen/sp_64"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_distance_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:text="@string/km"
                android:textColor="@color/black_white"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_distance_value"
                app:layout_constraintBottom_toBottomOf="@id/tv_distance_value"
                app:layout_constraintStart_toEndOf="@id/tv_distance_value" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ctl_flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_radius_white_stroke"
                android:paddingStart="@dimen/dp_16"
                android:paddingTop="@dimen/dp_8"
                android:paddingEnd="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_8"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_distance_value">


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_flag"
                    android:layout_width="@dimen/dp_16"
                    android:layout_height="@dimen/dp_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_flag_grey_24dp" />

                <TextView
                    android:id="@+id/tv_goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_4"
                    android:drawablePadding="@dimen/dp_4"
                    android:gravity="center"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_flag"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="5km" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ctl_start"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:layout_marginBottom="@dimen/dp_72"
                android:background="@drawable/bg_circle_orange_stroke_4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_start"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_20"
                    android:tint="@color/color_on_primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_exercise_grey_24dp" />

                <TextView
                    android:id="@+id/tv_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:gravity="center"
                    android:text="@string/start"
                    android:textColor="@color/color_on_primary"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_goal"
                android:layout_width="@dimen/dp_56"
                android:layout_height="@dimen/dp_56"
                android:background="@drawable/bg_red_circle_10dp"
                android:backgroundTint="@color/_99f5f5f5_99121212"
                android:padding="@dimen/dp_18"
                app:layout_constraintBottom_toBottomOf="@id/ctl_start"
                app:layout_constraintEnd_toStartOf="@id/ctl_start"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/ctl_start"
                app:srcCompat="@drawable/ic_flag_grey_24dp"
                app:tint="@color/black_666666" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_statistics"
                android:layout_width="@dimen/dp_56"
                android:layout_height="@dimen/dp_56"
                android:background="@drawable/bg_red_circle_10dp"
                android:backgroundTint="@color/_99f5f5f5_99121212"
                android:padding="@dimen/dp_18"
                app:layout_constraintBottom_toBottomOf="@id/ctl_start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ctl_start"
                app:layout_constraintTop_toTopOf="@id/ctl_start"
                app:srcCompat="@drawable/ic_statistics_grey_24dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>